--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="styles.css">
     <title>HeadPhones-Shop</title>
 </head>
 <body>
-    
+    <!--Navbar Section-->
+    <nav>
+        <div class="nav__header">
+            <div class="nav__logo">
+                
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
