Arquitecture section navbar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
     <nav>
         <div class="nav__header">
             <div class="nav__logo">
-                
+                <a href="#">
+                    <img src="./assets/logo-dark.png" alt="dark">
+                    <img src="./assets/logo-white.png" alt="white">
+                </a>
+            </div>
+            <div class="nav__menu__btn" id="menu-btn">
+                <i class="ri-menu-line"></i>
             </div>
         </div>
+        <ul class="nav__links" id="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#product">Product</a></li>
+            <li><a href="#store">Store</a></li>
+            <li><button class="btn">Buy Now</button></li>
+        </ul>
     </nav>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
