--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
             <li><button class="btn">Buy Now</button></li>
         </ul>
     </nav>
+
+    <!--Section Header-->
+    <header class="section__container header__container" id="home">
+        <div class="header__image">
+            <img src="assets/header.png" alt="header" />
+            <img src="assets/header-bg.png" alt="header_bg" class="header-bg" />
+            <div class="header__image__content">
+                <h4>Price: $100</h4>
+                <button class="btn">Add to cart</button>
+            </div>
+        </div>
+        <div class="header__content">
+            <h1>Bluetooth<br />Headphone</h1>
+            <p>
+                Dive into our curated selection of premium Bluetooth headphones,
+                crafted for the ultimate listening experience.
+            </p>
+        </div>
+    </header>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
