--- a/index.html
+++ b/index.html
@@ -84,6 +84,29 @@
             </div>
         </div>
     </section>
+
+    <!--Section Store-->
+    <section class="section__container store__container" id="store">
+        <h2>JBL beats design</h2>
+
+        <p>
+            Explore our JBL Beats Design collection, where style meets superior
+            audio performance.
+        </p>
+        <!-- Slider main container -->
+        <div class="swiper">
+              <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                    <div class="store__card">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
