Arquitecture section store

--- a/index.html
+++ b/index.html
@@ -100,10 +100,49 @@
                 <!-- Slides -->
                 <div class="swiper-slide">
                     <div class="store__card">
-
+                        <h4>Model no- 00035</h4>
+                        <img src="./assets/store-1.png" alt="store">
+                        <h3>Price- $120</h3>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="store__card">
+                        <h4>Model no- 00045</h4>
+                        <img src="./assets/store-2.png" alt="store">
+                        <h3>Price- $130</h3>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="store__card">
+                        <h4>Model no- 00025</h4>
+                        <img src="./assets/store-3.png" alt="store">
+                        <h3>Price- $110</h3>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="store__card">
+                        <h4>Model no- 00055</h4>
+                        <img src="./assets/store-4.png" alt="store">
+                        <h3>Price- $140</h3>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="store__card">
+                        <h4>Model no- 00015</h4>
+                        <img src="./assets/store-5.png" alt="store">
+                        <h3>Price- $100</h3>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="store__card">
+                        <h4>Model no- 00065</h4>
+                        <img src="./assets/store-6.png" alt="store">
+                        <h3>Price- $150</h3>
                     </div>
                 </div>
             </div>
+             <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
         </div>
     </section>
 
