Footer Dection complete

--- a/index.html
+++ b/index.html
@@ -146,6 +146,30 @@
         </div>
     </section>
 
+    <!--Footer Section-->
+    <footer class="footer">
+        <div class="section__container footer__container">
+            <img src="./assets/logo-white.png" alt="logo">
+            <ul class="footer__socials">
+                <li>
+                    <a href="#"><i class="ri-facebook-fill"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="ri-twitter-fill"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="ri-pinterest-line"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="ri-linkedin-fill"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__bar">
+            Copyright © 2025 Crisko Design. All rights reserved
+        </div>
+    </footer>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
